--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div class="mid-section">
             <h3 id="mid-title">Top three activities to do at Athens</h3>
             <div class="activities">
-                <div class="parthenon">
-                    <img src="parthenon.jpg" title="Photo by Jim Zafeiris on Unsplash" alt="The Parthenon with lights at night" id="parthenon-img">
+                <div class="location">
+                    <img src="parthenon.jpg" title="Photo by Jim Zafeiris on Unsplash" alt="The Parthenon with lights at night" class="location-img">
                     <h4>Visit the Parthenon</h4>
                     <p>Visiting the Parthenon is a must for any tourist in Athens.</p>
                 </div>
-                <div class="beach">
-                    <img src="beach.jpg" title="Photo by Nick Karvounis on Unsplash" alt="A beach with light blue colored water in Athens" id="beach-img">
+                <div class="location">
+                    <img src="beach.jpg" title="Photo by Nick Karvounis on Unsplash" alt="A beach with light blue colored water in Athens" class="location-img" >
                     <h4>Hit the beach</h4>
                     <p>Enjoy beautiful waters and golden sand on the many beaches around Athens.</p>
                 </div>
-                <div class="plaka">
-                    <img src="plaka.jpg" alt="A neighborhood in Plaka, Athens" id="plaka-img" title="Image by user32212 from Pixabay">
+                <div class="location">
+                    <img src="plaka.jpg" alt="A neighborhood in Plaka, Athens" class="location-img" title="Image by user32212 from Pixabay">
                     <h4>Go for a walk downtown</h4>
                     <p>Explore the beautiful Plaka and shop at the flea market of Monastiraki.</p>
                 </div>
